# cryptobot

./: DEPLOY_RENDER.md  README.md  main.py  outline.md  pyproject.toml  render.yaml  run_web.py
src/crypto_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cryptobot/: __init__.py  __main__.py  config.py  live.py  main.py  pipeline.py  schemas.py  service.py  webapp.py
src/cryptobot/backtest/: simulator.py  walkforward.py
src/cryptobot/data/: market.py  sentiment.py
src/cryptobot/decision/: engine.py  risk.py
src/cryptobot/features/: market.py  sentiment.py
src/cryptobot/licensing/: emailer.py  oauth.py  payments.py  security.py  service.py  store.py
src/cryptobot/models/: direction.py  regime.py
src/cryptobot/nlp/: events.py  gemini_client.py
src/cryptobot/storage/: mysql_store.py
src/cryptobot/web/static/: admin.js  app.css  app.js  login.js
src/cryptobot/web/templates/: about.html  admin.html  index.html  login.html  privacy.html  support.html  tutorial.html
tests/: test_backtest.py  test_config.py  test_events.py  test_features.py  test_licensing_account_binding.py  test_licensing_signup_trial.py  test_licensing_trial_backfill.py  test_licensing_trial_expiry.py  test_live.py  test_pipeline.py  test_service.py  test_signal_outcomes_analytics.py  test_webapp_admin_bypass.py
